--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <title>Tutorials #2</title>
+    <title>Petite Lycabettus</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
-    <link rel="stylesheet" href="assets/css/_reset.css">
-    <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -145,15 +143,18 @@
     <div class="eleven_a">
       <img src="/animations gifs imgs/11a.png" alt="eleven_a">
     </div>  
-    <div class="eleven_popup_b">
-      <img src="/animations gifs imgs/11b pop up images/floor plan 1 cut.jpg" alt="eleven_b">
+
+    <div class="eleven_b" id="eleven_b">
+      <img src="/animations gifs imgs/11b.png" alt="eleven_b" class="elevenb">
     </div>  
-    <div class="eleven_popup_c">
-      <img src="/animations gifs imgs/11b pop up images/floor plan 2.jpg" alt="eleven_c">
+    <div class="eleven_popup_c" id="elevenc">
+     <img src="/floor plan 1 cut.jpg" alt="floor" class="floor">
+     <img src="/floor plan 2.jpg" alt="eleven_b" class="floorb">
+     <button id="close-floorplan">X</button>
     </div> 
 
-
 </div>
+
 
    
 
@@ -166,17 +167,11 @@
     <div class="intro-content">
       <br>
       <br>
-      <br>
-      <br>
       <h1 class="title">Descent to Lycabettus Hill</h1>
-      <br>
-      <br>
       <p class="Text">An Interactive Story Game</p>
-      <br>
       <p class="Text">
         Journey through bunkers and intricate networks hidden beneath the earth's crust and find what's lying in the Athenian underbelly. 
         </p>
-        <br>
         <p class="Text">
           Navigate with the arrow or the WASD keys and search for the external links. 
           </p>
