--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 
 <div class="fivelinkone">
-  <a href="https://earth.google.com/web/@37.98188975,23.74279377,247.28507992a,247.0997707d,35y,81.76372908h,52.29628786t,0r"> 551</a>
+  <a href="https://earth.google.com/web/@37.98188975,23.74279377,247.28507992a,247.0997707d,35y,81.76372908h,52.29628786t,0r" target="_blank"> 551</a>
 </div>
 
 <div class="sevenlinkone">
