--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <img src="/animations gifs imgs/2a.jpg" alt="two">
   </div>   
   <div class="two_b">
-    <img src="/animations gifs imgs/2b.mkv" alt="twob">
+    <img src="/animations gifs imgs/2b.gif" alt="twob">
   </div>   
   <div class="two_c">
     <img src="/animations gifs imgs/2c.png" alt="twoc">
@@ -97,7 +97,7 @@
     <img src="/animations gifs imgs/3b.png" alt="three_b">
   </div> 
   <div class="three_c">
-    <img src="/animations gifs imgs/3c.mp4" alt="three_c">
+    <img src="/animations gifs imgs/3c.png" alt="three_c">
   </div>   
   <div class="three_d">
     <img src="/animations gifs imgs/3d.png" alt="three_d">
