--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </div>   
  
     <div class="five_b">
-      <img src="/animations gifs imgs/5b.mp4" alt="fiveb">
+      <video src="/animations gifs imgs/5b.mp4" autoplay loop></video>
     </div>  
     <div class="five_c">
       <img src="/animations gifs imgs/5c.png" alt="five3">
@@ -143,7 +143,7 @@
       <img src="/animations gifs imgs/8b.png" alt="eight_b">
     </div>  
     <div class="nine_a">
-      <img src="/animations gifs imgs/9.mp4" alt="nine_a">
+      <video src="/animations gifs imgs/9.mp4" autoplay loop></video>
     </div>  
     <div class="eleven_a">
       <img src="/animations gifs imgs/11a.png" alt="eleven_a">
