--- a/index.html
+++ b/index.html
@@ -492,6 +492,34 @@ the future?
       </p>
       </p>
           <br>
+          <br>
+          <p class="footnotes">1. Lowrey, A. (2020, September 15). The Bunker Magnates Hate to Say They Told You So. The
+
+            Atlantic. https://www.theatlantic.com/technology/archive/2020/09/rising-s-vivos-and-the-booming-
+            bunker-economy/616240/
+            <br>
+            2. Swayze, J. (1980). Underground Gardens and Homes: The Best of Two Worlds Above and
+            Below. Geobuilding Systems.
+            <br>
+            3. Boyd, G., & Linehan, D. (2018). Becoming Atomic: The Bunker, Modernity and the City.
+            Architectural Research Quarterly, 22(3), 241-255. https://doi.org/10.1017/S1359135518000581
+            <br>
+            4. Colomina, B. (2007). Domesticity at War. MIT Press.↩︎
+            <br>
+            5. Hito Steyerl: Bubble Vision. (2018). [YouTube Video]. In YouTube. https://www.youtube.com/watch?
+            v=T1Qhy0_PCjs
+            <br>
+            6. Barbrook, R., & Cameron, A. (1996). The Californian Ideology. Science As Culture, 6(1), 44-72.
+            https://doi.org/10.1080/09505439609526455
+            <br>
+            7. Kallipoliti, L. (2018). The architecture of closed worlds. Or, what is the power of shit? Lars Müller
+            Verlag.↩︎
+            <br>
+            8. Caroline Busta | Clearnet vs. Dark Forest: Notes on the New Psychogeography of Art. (n.d.)
+            Retrieved October 3, 2023, from https://www.youtube.com/watch?v=1iZiu9tZ290&t=420s
+            <br>
+            9. Deep Underground Military Base - Wikispooks. (n.d.). Www.wikispooks.com. Retrieved October 3,
+            2023, from https://www.wikispooks.com/wiki/Deep_Underground_Military_Base</p>
          
   </div>
 </div>
