--- a/index.html
+++ b/index.html
@@ -571,9 +571,23 @@ the future?
         <p class="Text">
           Navigate with the arrow or the WASD keys and search for the external links. 
           </p>
-          <br>
           <p class="Text">
             The depths await. 
+            <br>
+            <p class="smallext">
+            Only for Desktop browsers
+            <br>
+Phones and Tablets are not supported
+
+<br>
+Architecture Thesis Project by Chris Reizis
+<br>
+University of Patras
+<br>
+Web Design: Esto Association 
+<br>
+Sound: dr comet
+            </p>
             </p>
             <br>
           
